--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,7 +15,10 @@ li {
 }
 html {
   box-sizing: border-box;
-  font-size: $default-font-size;
+  font-size: 62.5%; // 1rem = 10px; 10px / 16px = 62.5%.
+  @include respond(tab-port) {font-size: 56.25%;} // 1rem = 9px; 9px / 16px = 56.25%.
+  @include respond(tab-port-small) {font-size: 50%;} // 1rem = 8px; 8px / 16px = 50%.
+  @include respond(phone) {font-size: 43.75%;} // 1rem = 7px; 7px / 16px = 43.75%.
 }
 body {
   font-family: $font-primary;
