--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -18,6 +18,9 @@
   grid-column-gap: 3rem;
   grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
   margin-bottom: 7rem;
+  @include respond(tab-land) {
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  }
 }
 .box-center-4 {
 	display: grid;
