--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -14,6 +14,9 @@
     padding-bottom: 5rem;
     margin-bottom: 3rem;
     border-bottom: 2px solid rgba($color-primary-2, .1);
+    @include respond(phone-small) {
+      margin-left: 3rem;
+    }
   }
   &__logo {
     margin-bottom: 3rem;
@@ -62,9 +65,39 @@
   }
 }
 .copyright {
-  grid-column: full-start / full-end;
+  grid-column: col-start 1 / col-end 7;
+  // grid-column: full-start / full-end;
   text-align: center;
+  align-self: end;
   &:hover > a {
     color: $color-tertiary-2;
   }
 }
+.back-to-top {
+  grid-column: col-end 7 / col-end 8;
+  width: 6rem;
+  padding: .5rem 0;
+  &::after {
+    @include arrow-top;
+    margin-top: 1.5rem;
+  }
+}
+// .chat {
+//   position: fixed;
+//   bottom: 1rem;
+//   right: 1rem;
+//   width: 25rem;
+//   font-size: 1.7rem;
+//   font-weight: 600;
+//   background-color: $color-secondary;
+//   box-shadow: 1rem 0 2rem rgba(0, 0, 0, .5);
+//   &__content {
+//     height: 35rem;
+//     background-color: $color-secondary;
+//   }
+//   &__btn {
+//     width: 100%;
+//     display: inline-block;
+//     padding-left: 1.5rem;
+//   }
+// }
