--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -2,13 +2,15 @@
   grid-column: col-start 3 / col-end 6;
   grid-row: 1 / 2;
   font-size: 2rem;
-  display: grid;
   align-content: end;
   @include respond(tab-land) {grid-column: col-start 2 / col-end 6;}
   @include respond(tab-land-medium) {
     grid-column: col-start 4 / col-end 8;
     grid-row: 2 / 3;
     margin-top: 1rem;
+  }
+  @include respond(tab-port-medium-min){
+    display: grid !important;
   }
   @include respond(tab-port-medium) {
     grid-column: center-start / center-end ;
@@ -66,23 +68,25 @@
     }
   }
 }
-.active__list {
-  & .navigation__link::after {
-    transform: scaleX(1);
-    transition: all .5s;
-    background-color: $color-tertiary;
-  }
-  &:not(:last-child)::after {
-    transform: rotate(-135deg);
-  }
-  & .dropdown__menu {
-    transform: translate(0, 0);
-    opacity: 1;
-    visibility: visible;
-    
-    @include respond(tab-port-medium) {
-      display: block;
-      // width: 50%;
+@include respond(tab-port-medium) {
+  .active__list {
+    & .navigation__link::after {
+      transform: scaleX(1);
+      transition: all .5s;
+      background-color: $color-tertiary;
+    }
+    &:not(:last-child)::after {
+      transform: rotate(-135deg);
+    }
+    & .dropdown__menu {
+      transform: translate(0, 0);
+      opacity: 1;
+      visibility: visible;
+      
+      @include respond(tab-port-medium) {
+        display: block;
+        // width: 50%;
+      }
     }
   }
 }
