--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -3,11 +3,11 @@
   grid-row: 2 / 4;
   background-color: rgba($bkg-top-color, .7);
   padding: 5rem;
-  margin: 6rem 0 5rem 8rem;
+  margin: 4rem 0 5rem 8rem;
   font-family: $font-heading-1;
   @include respond(tab-land-medium) {
     grid-row: 3 / 5;
-    margin: 3rem 0 2rem 4rem;
+    margin: 3rem 0 rem 4rem;
   }
   @include respond(tab-port-medium) {margin:2rem 0 0 0;}
   @include respond(tab-port-small) {
