--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -9,9 +9,9 @@
     grid-row: 2 / 3;
     margin-top: 1rem;
   }
-  @include respond(tab-port-medium-min){
-    display: grid !important;
-  }
+  // @include respond(tab-port-medium-min){
+  //   display: grid !important;
+  // }
   @include respond(tab-port-medium) {
     grid-column: center-start / center-end ;
     background-color: rgba($bkg-top-color , .9);
