--- a/sass/layout/_dropdown.scss
+++ b/sass/layout/_dropdown.scss
@@ -50,7 +50,7 @@
     display: block;
   }
   grid-row: 1 / 2;
-  grid-column: col-end 7 / col-end 8;
+  grid-column: 7 / 8;
   align-self: end;
   justify-self: end;
   position: relative;
