--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -21,6 +21,10 @@
   @include respond(tab-land) {
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   }
+  @include respond(phone) {
+    grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
+    grid-column-gap: 1.5rem;
+  }
 }
 .box-center-4 {
 	display: grid;
